# OpenCVCascadeClassifierSample

./: .gitignore  CMakeLists.txt  README.md  face_recognition_video.cpp  face_recognition_video.h  main.cpp
